--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
